--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,22 @@ html {
     box-sizing: inherit;
 }
 
-.warning {
-    color: green;
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
+    margin: 0;
+    padding: 0;
+}
+
+ol,
+ul {
+    max-width: 100%;
+    height: auto;
 }
